Set MIX_HOME env in mix action

--- a/mix/Dockerfile
+++ b/mix/Dockerfile
@@ -17,7 +17,10 @@ RUN wget https://packages.erlang-solutions.com/erlang-solutions_1.0_all.deb && \
 RUN apt-get update
 RUN apt-get install -y esl-erlang
 RUN apt-get install -y elixir
+
 ARG MIX_HOME=/github/home/.mix
+ENV MIX_HOME=$MIX_HOME
+
 RUN mix local.rebar --force
 RUN mix local.hex --force
 
