--- a/mix/Dockerfile
+++ b/mix/Dockerfile
@@ -11,6 +11,8 @@ LABEL "com.github.actions.color"="orange"
 
 ARG MIX_HOME=/.mix
 ENV MIX_HOME=$MIX_HOME
+ARG MIX_ENV=prod
+ENV MIX_ENV=$MIX_ENV
 
 RUN mix local.rebar --force
 RUN mix local.hex --force
