Update attributes in mix/dialyzer Dockerfile

--- a/mix/dialyzer/Dockerfile
+++ b/mix/dialyzer/Dockerfile
@@ -4,8 +4,8 @@ LABEL "repository"="https://github.com/jclem/actions"
 LABEL "homepage"="https://github.com/jclem/actions/mix"
 LABEL "maintainer"="Jonathan Clem <jonathan@jclem.net>"
 
-LABEL "com.github.actions.name"="mix"
-LABEL "com.github.actions.description"="An action for running Elixir mix commands"
+LABEL "com.github.actions.name"="mix/dialyzer"
+LABEL "com.github.actions.description"="An action for running Elixir mix commands, with PLT"
 LABEL "com.github.actions.icon"="code"
 LABEL "com.github.actions.color"="orange"
 
